[gd_scene load_steps=12 format=3 uid="uid://ch7bqpxuhhvks"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_e5vd8"]
[ext_resource type="Texture2D" uid="uid://exluqqvhjkvj" path="res://assets/character/Meow_Knight-Sheet.png" id="2_t0atl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_652gp"]

[sub_resource type="Animation" id="Animation_phdrw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_3p3ga"]
resource_name = "attack"
length = 0.64
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(9, 3), Vector2i(8, 3), Vector2i(6, 3), Vector2i(5, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3)]
}

[sub_resource type="Animation" id="Animation_7k15a"]
resource_name = "dash"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4)]
}

[sub_resource type="Animation" id="Animation_s3gsb"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_nhr2y"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhlqi"]
_data = {
"RESET": SubResource("Animation_phdrw"),
"attack": SubResource("Animation_3p3ga"),
"dash": SubResource("Animation_7k15a"),
"idle": SubResource("Animation_s3gsb"),
"run": SubResource("Animation_nhr2y")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_87ged"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p1tnn"]
radius = 23.0217

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_e5vd8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -7)
shape = SubResource("CapsuleShape2D_652gp")
debug_color = Color(0, 0.6, 0.701961, 0.172549)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -13)
scale = Vector2(2, 2)
texture = ExtResource("2_t0atl")
hframes = 10
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dhlqi")
}
autoplay = "idle"

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(1, -5)
shape = SubResource("CircleShape2D_87ged")
debug_color = Color(0.694118, 0.478431, 0.360784, 0)

[node name="HitboxArea" type="Area2D" parent="."]
position = Vector2(-1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(1, -5)
shape = SubResource("CircleShape2D_p1tnn")
debug_color = Color(0.331014, 0.0393631, 0.125835, 0)

[connection signal="hp_changed" from="." to="." method="_on_hp_changed"]
